--- a/data_load.ipynb
+++ b/data_load.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNukXlIzz8dBrOFp5Uu8AXL",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -38,8 +22,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting flipside\n",
             "  Downloading flipside-2.0.8-py3-none-any.whl (52 kB)\n",
@@ -83,18 +67,23 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "from flipside import Flipside"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "3EL5V1LNLAsL"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "from flipside import Flipside"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "AofsgKPHLDwx"
+      },
+      "outputs": [],
       "source": [
         "# Initialize `Flipside` with your API Key and API Url\n",
         "flipside = Flipside(\"30a41e48-e8b2-4aae-9b4a-0162750b3712\", \"https://api-v2.flipsidecrypto.xyz\")\n",
@@ -109,7 +98,7 @@
         "             ROUND(SUM(AMOUNT_USD)) AS value_usd,\n",
         "             count(TX_HASH) as n_of_transfers\n",
         "        FROM ETHEREUM.CORE.EZ_NATIVE_TRANSFERS\n",
-        "       WHERE block_timestamp >= '2020-01-01'\n",
+        "       WHERE block_timestamp >= '2022-01-01'\n",
         "       GROUP BY FROM_ADDRESS, TO_ADDRESS, date_trunc('hour', block_timestamp)\n",
         "      )\n",
         "  WHERE value_eth > 100\n",
@@ -117,21 +106,21 @@
         "\n",
         "# Run the query against Flipside's query engine and await the results\n",
         "query_result_set = flipside.query(sql)"
-      ],
-      "metadata": {
-        "id": "AofsgKPHLDwx"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uKeX1OKLNc_c"
+      },
+      "outputs": [],
       "source": [
         "def pagination_function(query_result_set): # what page are we starting on?\n",
         "  current_page_number = 1\n",
         "\n",
         "  # How many records do we want to return in the page?\n",
-        "  page_size = 1000\n",
+        "  page_size = 10000\n",
         "\n",
         "  # set total pages to 1 higher than the `current_page_number` until\n",
         "  # we receive the total pages from `get_query_results` given the\n",
@@ -155,79 +144,113 @@
         "\n",
         "    current_page_number += 1\n",
         "  return all_rows"
-      ],
-      "metadata": {
-        "id": "uKeX1OKLNc_c"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "all_rows = pagination_function(query_result_set)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "lmKjxoocNd5l"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "all_rows = pagination_function(query_result_set)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "eth_stats_hourly = pd.DataFrame(all_rows)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "hkh80KodNsbA"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "eth_stats_hourly = pd.DataFrame(all_rows)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "7rhP7Do0N3U2",
+        "outputId": "06f3c3f7-bfd6-40c1-f19f-ea86ac4cb592"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2022-01-01T00:00:00.000Z'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ],
       "source": [
         "eth_stats_hourly.hour.min()"
-      ],
-      "metadata": {
-        "id": "7rhP7Do0N3U2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "background_save": true
+        },
+        "id": "XYwkcmOwN48j"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "# Mount Google Drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "id": "XYwkcmOwN48j"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "eth_stats_hourly.to_parquet('/content/drive/My Drive/DS Masters/Data/flipside_snowflake_eth_trans/eth_hourly_100_eth.parquet')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "0Tm8IbtLO6UE"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "eth_stats_hourly.to_parquet('/content/drive/My Drive/DS Masters/Data/flipside_snowflake_eth_trans/eth_hourly_100_eth.parquet')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "K3k3ddyhRqp3"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "mount_file_id": "1xgy-_ZB7KKC7g6u07XIqdzTIZIcVcIuF",
+      "authorship_tag": "ABX9TyPteSDvYotJYe7bETMuuKJI",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
